--- a/app/src/main/res/layout/activity_join_circle.xml
+++ b/app/src/main/res/layout/activity_join_circle.xml
@@ -8,6 +8,13 @@
     android:layout_marginEnd="@dimen/activity_horizontal_margin"
     tools:context=".activities.JoinCirlceActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/joincircle_toolbar"
+        app:titleTextColor="@android:color/background_light"
+        android:background="@color/colorPrimaryDark"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -44,11 +51,4 @@
         android:textColor="@android:color/background_light"
         tools:ignore="RtlCompat" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="240dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        app:srcCompat="@android:color/transparent" />
 </RelativeLayout>
