--- a/app/src/main/res/layout/activity_signup_invite_code.xml
+++ b/app/src/main/res/layout/activity_signup_invite_code.xml
@@ -8,47 +8,67 @@
     android:layout_marginEnd="@dimen/activity_horizontal_margin"
     tools:context=".activities.SignupInviteCodeActivity">
 
-    <TextView
-        android:id="@+id/textView_circle_code"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="259dp"
-        android:text="XXXXXX"
-        android:textColor="@android:color/background_dark"
-        android:textSize="30sp"
-        android:textStyle="bold" />
-
-    <TextView
+    <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="77dp"
-        android:text="Save this code. You will need it to invite friends."
-        android:textAlignment="center"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="14sp"
-        tools:ignore="RtlCompat" />
+        android:id="@+id/invite_toolbar"
+        app:titleTextColor="@android:color/background_light"
+        android:background="@color/colorPrimaryDark"/>
 
-    <Button
-        android:id="@+id/button_register"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:background="@android:color/holo_purple"
-        android:onClick="register_user"
-        android:text="Register"
-        android:textColor="@android:color/background_light" />
 
     <ImageView
+        android:id="@+id/invite_image"
         android:layout_width="match_parent"
         android:layout_height="240dp"
+        android:layout_below="@id/invite_toolbar"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         app:srcCompat="@drawable/icon_invite"
         tools:ignore="RtlCompat" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/share_textview"
+        android:layout_below="@id/invite_image"
+        android:gravity="center_horizontal"
+        android:text="Share the code with the people you want in circle"
+        android:textSize="16sp"/>
+    
+    <TextView
+        android:id="@+id/code_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/share_textview"
+        android:text="XXXXXX"
+        android:textColor="@color/colorPrimary"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/sendCode_btn"
+        android:background="@color/colorPrimary"
+        android:layout_below="@id/code_textview"
+        android:layout_marginTop="37dp"
+        android:textSize="16sp"
+        android:textAllCaps="false"
+        android:text="Send Code"
+        android:textColor="@android:color/background_light"
+        android:onClick="sendCode"/>
+    
+    <TextView
+        android:id="@+id/button_register"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/sendCode_btn"
+        android:layout_marginTop="32dp"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        android:onClick="register_user"
+        android:text="Register" />
+
 </RelativeLayout>
