--- a/app/src/main/res/layout/activity_signup_email.xml
+++ b/app/src/main/res/layout/activity_signup_email.xml
@@ -19,7 +19,7 @@
     </android.support.v7.widget.Toolbar>
 
     <EditText
-        android:id="@+id/signin_password_edittext"
+        android:id="@+id/signup_email_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -32,15 +32,15 @@
         android:textSize="18sp" />
 
     <Button
-        android:id="@+id/signin_password_next_button"
+        android:id="@+id/signup_email_next_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
         android:background="@drawable/button_shape"
-        android:onClick="checkIfEmailPresent"
-        android:text="Next"
+        android:onClick="email_exist_check"
+        android:text="Sign Up Next"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="18sp" />
@@ -49,7 +49,7 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/signin_password_next_button"
+        android:layout_above="@+id/signup_email_next_button"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="6dp"
         android:text="By signing up you accept our Terms of Service and Privacy Policy." />
